# thermometer-rs

./: Cargo.toml  example_config.yaml
src/: cam.rs  config.rs  main.rs  sensors.rs
