[package]
name = "thermometer-rs"
version = "0.1.0"
authors = ["Tobias Nienhaus <me@tobiasnienhaus.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht_lib = { git = "https://github.com/TobiasNienhaus/dht22_pi.git", package = "dht11-22_pi" }
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
bunt = "0.2.4"
csv = "1.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3.0.2"
rascam = "0.0.2"
eye = "0.4.0"
